# fractran

./: ChangeLog.md  fractran.cabal  primes_2.frac
src/: Fractran.hs
